# vision-arwaky

./: .coverage  .gitignore  Dockerfile  INDEX.md  README.md  SKILL.md  auto_linter.config.python.yaml  config.yaml  lint_results.txt  local.json  mcp.json  pyproject.toml  remote.json  run-vision.js  security_vulnerability_report.md  vision_arwaky_local.json
.github/workflows/: publish.yml  test.yml
scripts/: build.sh  bump.py  install.local.sh
src/: __init__.py  cli_entry.py  mcp_entry.py  tui_entry.py
src/agent/: __init__.py  vision_agent_orchestrator.py
src/capabilities/: __init__.py  image_processing_processor.py  object_tracking_tracker.py  video_analysis_analyzer.py  video_processing_processor.py  video_timeline_generator.py  visual_memory_store.py
src/cli/: __init__.py  surface_cli_commands_handler.py  surface_cli_handler.py  surface_tui_handler.py
src/contract/: __init__.py  ffmpeg_video_port.py  image_processing_protocol.py  llm_vision_port.py  object_tracking_protocol.py  opencv_image_port.py  registry_service_aggregate.py  system_utils_port.py  tesseract_ocr_port.py  video_analysis_protocol.py  video_processing_protocol.py  video_timeline_protocol.py  visual_memory_protocol.py
src/image/: __init__.py  agent_image_orchestrator.py  capabilities_image_processing_processor.py  infrastructure_llm_vision_adapter.py  infrastructure_tesseract_ocr_adapter.py
src/infrastructure/: __init__.py  ffmpeg_video_adapter.py  llm_vision_adapter.py  opencv_image_adapter.py  system_utils_util.py  tesseract_ocr_adapter.py
src/mcp/: __init__.py  surface_mcp_handler.py  surface_mcp_tools_handler.py
src/memory/: __init__.py  agent_memory_orchestrator.py  capabilities_visual_memory_store.py
src/opencv/: __init__.py  infrastructure_opencv_image_adapter.py
src/shared/: ffmpeg_video_port.py  image_processing_protocol.py  llm_vision_port.py  object_tracking_protocol.py  opencv_image_port.py  registry_service_aggregate.py  system_utils_port.py  tesseract_ocr_port.py  vision_models_vo.py  (+4 more)
tests/: test_cli_surface.py  test_image_advanced.py  test_integration.py  test_memory_advanced.py  test_shared.py  test_video_advanced.py  test_vision.py
(+17 files in other folders)
