[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-arwaky"
version = "2.0.5"
description = "MCP server for unified image and video processing"
requires-python = ">=3.12"
authors = [
    {name = "rakaarwaky", email = "arwaky90@gmail.com"}
]
dependencies = [
    "mcp[cli]",
    "fastmcp",
    "pydantic",
    "opencv-contrib-python-headless",
    "pillow",
    "numpy",
    "pytesseract",
    "requests",
    "pyyaml",
    "llama-cpp-python",
]

[project.scripts]
vision-arwaky = "src.mcp_entry:main"
vision-cli = "src.cli_entry:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
