[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-arwaky"
version = "2.0.6"
description = "MCP server for unified image and video processing"
requires-python = ">=3.12"
authors = [
    {name = "rakaarwaky", email = "arwaky90@gmail.com"}
]
dependencies = [
    "mcp[cli]",
    "fastmcp",
    "pydantic",
    "opencv-contrib-python-headless",
    "pillow",
    "numpy",
    "pytesseract",
    "requests",
    "pyyaml",
    "llama-cpp-python",
]

[project.scripts]
vision-arwaky-mcp = "src.mcp_entry:main"
vision-arwaky-cli = "src.cli_entry:cli"
vision-arwaky-tui = "src.tui_entry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
